# caring-note-prompt-tuner

./: .gitignore  README.md  main.py  pyproject.toml
analysis/counselsession/: analysis_counsel_session.ipynb  analysis_counselsession.py
model/: AICounselSummary.py  CounselCard.py  CounselPurposeAndNote.py  CounselSession.py  MedicationCounsel.py
model/decorator/: JSONText.py
prompt/: ai_summary_prompt_origin.yml
test/: test_AICounselSummary.py
